welcome.lessons.welcome.array.array667.Array667.scala.error
array667:12: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false
         ^