welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var A:Int=0
  var B:Int=0
  for (n<-0 to nums.length-1){
    if (nums(n)==6 &&nums(n+1)==6){
      A=A+1
    }
    if (nums(n)==6 && nums(n+1)==7){
      B=B+1
    }
  }
  return false
}